[package]
name = "protohackers_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-channel = "1.8.0"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
once_cell = "1.17.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
primes = "0.3.0"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.0", features = ["full"] }

